--- a/css/styles.css
+++ b/css/styles.css
@@ -650,12 +650,6 @@ address {
 
 .form-field {
   display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.input-button-wrapper {
-  display: flex;
   flex-direction: row;
   gap: 24px;
 }
@@ -668,6 +662,11 @@ address {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #2e2f42;
   padding: 8px 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
 
 .form-input::placeholder {
@@ -698,6 +697,12 @@ address {
   background: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
 }
 
 .form-button:hover,
