--- a/css/styles.css
+++ b/css/styles.css
@@ -667,6 +667,7 @@ address {
   line-height: 2;
   letter-spacing: 0.04em;
   color: #fff;
+  background-color: transparent;
 }
 
 .form-input::placeholder {
@@ -692,7 +693,7 @@ address {
   gap: 16px;
   padding: 8px 24px;
   border-radius: 4px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -703,21 +704,13 @@ address {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
+  cursor: pointer;
 }
 
 .form-button:hover,
 .form-button:focus {
   background-color: #404bbf;
   cursor: pointer;
-}
-
-.form-button-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
 }
 
 .form-button-icon {
