--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,8 @@ address {
   background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-txtarea::placeholder {
@@ -448,6 +449,7 @@ address {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button-close {
@@ -462,19 +464,23 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button-close:hover,
 .modal-button-close:focus {
   background-color: #404bbf;
   fill: #fff;
+  border: none;
 }
 
 .modal-icon-close {
   width: 8px;
   height: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -512,8 +518,9 @@ address {
   width: 100%;
   height: 40px;
   padding: 8px 38px;
+  background-color: transparent;
   outline: transparent;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-icon {
