--- a/css/styles.css
+++ b/css/styles.css
@@ -532,33 +532,48 @@ address {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus-within .input-icon {
+.modal-form-input:focus + .input-icon {
   fill: #4d5ae5;
 }
 
-.modal-form-input:focus-within,
-.modal-form-txtarea:focus-within {
-  border: 1px solid #4d5ae5;
+.modal-form-input:focus,
+.modal-form-txtarea:focus {
+  border-color: #4d5ae5;
+}
+
+.txtarea-container {
+  margin-bottom: 16px;
 }
 
 .modal-form-txtarea {
-  margin-bottom: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
+  height: 120px;
   padding: 8px 16px;
   outline: transparent;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button-send {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
   border-radius: 4px;
-  padding: 16px 32px;
-  margin: 24px auto;
-  width: 169px;
+  margin: 0 auto;
+  min-width: 169px;
   height: 56px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   color: #fff;
@@ -573,6 +588,7 @@ address {
 }
 
 .checkbox-field {
+  margin-bottom: 24px;
   display: flex;
   justify-content: center;
 }
@@ -606,6 +622,12 @@ address {
   border: 0;
 }
 
+.visually-hidden:checked + .icon-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
 .icon-span {
   width: 16px;
   height: 16px;
@@ -613,11 +635,12 @@ address {
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* display: flex;
-  justify-content: center;
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
   align-items: center;
-  flex-direction: row; */
+  justify-content: center;
+  fill: transparent;
 }
 
 .icon-span:hover,
@@ -630,7 +653,6 @@ address {
 .checkbox-icon {
   width: 10px;
   height: 8px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
